successfully implemented the method we'll use to dynamically generate interview pages

--- a/Login/Login/My Sensory Experiences.csproj
+++ b/Login/Login/My Sensory Experiences.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Globals.cs" />
     <Compile Include="EditUser2.cs">
       <SubType>Form</SubType>
     </Compile>
