--- a/Login/Login/My Sensory Experiences.csproj
+++ b/Login/Login/My Sensory Experiences.csproj
@@ -107,17 +107,17 @@
     <Compile Include="UserManagement.Designer.cs">
       <DependentUpon>UserManagement.cs</DependentUpon>
     </Compile>
-    <Compile Include="NewAccount.cs">
+    <Compile Include="NewOTAccount.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NewAccount.Designer.cs">
-      <DependentUpon>NewAccount.cs</DependentUpon>
+    <Compile Include="NewOTAccount.Designer.cs">
+      <DependentUpon>NewOTAccount.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddUser.cs">
+    <Compile Include="AddProfile.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AddUser.Designer.cs">
-      <DependentUpon>AddUser.cs</DependentUpon>
+      <DependentUpon>AddProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="Interview.cs">
       <SubType>Form</SubType>
@@ -151,11 +151,11 @@
     <EmbeddedResource Include="InterviewCover.resx">
       <DependentUpon>InterviewCover.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NewAccount.resx">
-      <DependentUpon>NewAccount.cs</DependentUpon>
+    <EmbeddedResource Include="NewOTAccount.resx">
+      <DependentUpon>NewOTAccount.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AddUser.resx">
-      <DependentUpon>AddUser.cs</DependentUpon>
+      <DependentUpon>AddProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Interview.resx">
       <DependentUpon>Interview.cs</DependentUpon>
