--- a/Login/Login/My Sensory Experiences.csproj
+++ b/Login/Login/My Sensory Experiences.csproj
@@ -68,11 +68,11 @@
       <DependentUpon>CapstoneDB.xsd</DependentUpon>
     </Compile>
     <Compile Include="Globals.cs" />
-    <Compile Include="EditUser2.cs">
+    <Compile Include="EditProfile.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EditUser2.Designer.cs">
-      <DependentUpon>EditUser2.cs</DependentUpon>
+    <Compile Include="EditProfile.Designer.cs">
+      <DependentUpon>EditProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="EditUser1.cs">
       <SubType>Form</SubType>
@@ -142,8 +142,8 @@
     <EmbeddedResource Include="AddProfile.resx">
       <DependentUpon>AddProfile.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="EditUser2.resx">
-      <DependentUpon>EditUser2.cs</DependentUpon>
+    <EmbeddedResource Include="EditProfile.resx">
+      <DependentUpon>EditProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EditUser1.resx">
       <DependentUpon>EditUser1.cs</DependentUpon>
