--- a/Login/Login/My Sensory Experiences.csproj
+++ b/Login/Login/My Sensory Experiences.csproj
@@ -139,6 +139,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewResults.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewResults.Designer.cs">
+      <DependentUpon>ViewResults.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewResultsTable.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewResultsTable.Designer.cs">
+      <DependentUpon>ViewResultsTable.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddProfile.resx">
       <DependentUpon>AddProfile.cs</DependentUpon>
     </EmbeddedResource>
@@ -180,6 +192,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserManagement.resx">
       <DependentUpon>UserManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewResults.resx">
+      <DependentUpon>ViewResults.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewResultsTable.resx">
+      <DependentUpon>ViewResultsTable.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="CapstoneDB\CapstoneDB.xsc">
       <DependentUpon>CapstoneDB.xsd</DependentUpon>
