--- a/Login/Login/My Sensory Experiences.csproj
+++ b/Login/Login/My Sensory Experiences.csproj
@@ -92,11 +92,17 @@
     <Compile Include="IndependentInterview.Designer.cs">
       <DependentUpon>IndependentInterview.cs</DependentUpon>
     </Compile>
-    <Compile Include="InterviewCover.cs">
+    <Compile Include="IndependentCover.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="InterviewCover.Designer.cs">
-      <DependentUpon>InterviewCover.cs</DependentUpon>
+    <Compile Include="IndependentCover.Designer.cs">
+      <DependentUpon>IndependentCover.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GuidedInterviewCover.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GuidedInterviewCover.Designer.cs">
+      <DependentUpon>GuidedInterviewCover.cs</DependentUpon>
     </Compile>
     <Compile Include="SelectInterview.cs">
       <SubType>Form</SubType>
@@ -178,8 +184,11 @@
     <EmbeddedResource Include="IndependentInterview.resx">
       <DependentUpon>IndependentInterview.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="InterviewCover.resx">
-      <DependentUpon>InterviewCover.cs</DependentUpon>
+    <EmbeddedResource Include="IndependentCover.resx">
+      <DependentUpon>IndependentCover.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GuidedInterviewCover.resx">
+      <DependentUpon>GuidedInterviewCover.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SelectInterview.resx">
       <DependentUpon>SelectInterview.cs</DependentUpon>
