--- a/Login/Login/My Sensory Experiences.csproj
+++ b/Login/Login/My Sensory Experiences.csproj
@@ -281,14 +281,23 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <DependentUpon>CapstoneDB.mdf</DependentUpon>
     </Content>
+    <Content Include="resources\0testsound.mp3" />
+    <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.1OtherPeopleTalking.wav" />
+    <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.2Fireworks.wav" />
+    <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.3LoudVoices.wav" />
+    <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.4HouseholdAppliances.wav" />
+    <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.5Vehicles.wav" />
+    <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.6BathroomAppliances.wav" />
+    <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.7Sirens.wav" />
+    <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.8SuddenLoudNoises.wav" />
     <Content Include="resources\11169409_10207513025963219_4499665096783750703_n.jpg" />
     <Content Include="resources\8. Other\Movements.jpg" />
     <Content Include="resources\8. Other\Sights.jpg" />
     <Content Include="resources\8. Other\Smells.jpg" />
     <Content Include="resources\8. Other\Sounds.jpg" />
+    <Content Include="resources\untitled.wav" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\" />
     <Folder Include="resources\1. Hearing\3. Are there some sounds that make it hard for you to concentrate_\" />
     <Folder Include="resources\1. Hearing\4. Are there sounds that you like to listen to_\" />
     <Folder Include="resources\1. Hearing\5. Are there some sounds that you make a lot_\" />
@@ -304,6 +313,25 @@
     <Folder Include="resources\6. Movement\3. Are there ways of moving that you like_\" />
     <Folder Include="resources\6. Movement\4. Are there some ways that you move over and over again_\" />
     <Folder Include="resources\7. Environment\" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="AxWMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>aximp</WrapperTool>
+      <Isolated>False</Isolated>
+    </COMReference>
+    <COMReference Include="WMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
