--- a/Login/Login/My Sensory Experiences.csproj
+++ b/Login/Login/My Sensory Experiences.csproj
@@ -284,7 +284,6 @@
     <EmbeddedResource Include="ViewResultsTable.resx">
       <DependentUpon>ViewResultsTable.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="bin\Debug\Login.exe.config" />
     <None Include="CapstoneDB\CapstoneDB.xsc">
       <DependentUpon>CapstoneDB.xsd</DependentUpon>
     </None>
@@ -328,23 +327,12 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bin\Debug\AxInterop.WMPLib.dll" />
-    <Content Include="bin\Debug\CapstoneDB\CapstoneDB.mdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\CapstoneDB\CapstoneDB_log.ldf">
-      <DependentUpon>CapstoneDB.mdf</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Interop.WMPLib.dll" />
-    <Content Include="bin\Debug\Login.exe" />
-    <Content Include="bin\Debug\Login.pdb" />
     <Content Include="CapstoneDB\CapstoneDB.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="CapstoneDB\CapstoneDB_log.ldf">
       <DependentUpon>CapstoneDB.mdf</DependentUpon>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="resources\0testsound.mp3" />
     <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.1OtherPeopleTalking.wav" />
@@ -503,9 +491,7 @@
     <Content Include="resources\TopLeftInterviewImage%28sense%29\touch.PNG" />
     <Content Include="resources\untitled.wav" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="bin\Release\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <COMReference Include="AxWMPLib">
       <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
