Fixed error: Updating instead of inserting database

--- a/Login/Login/My Sensory Experiences.csproj
+++ b/Login/Login/My Sensory Experiences.csproj
@@ -304,6 +304,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="resources\1. Hearing\2. Are there times when it is hard to listen_\desktop.ini" />
     <None Include="resources\2. Sight\2. Are there some things you see that make it hard to concentrate_\desktop.ini" />
     <None Include="resources\5. Taste\2. Are there some ways that food tastes or feels in your mouth that you don%27t like_\desktop.ini" />
     <None Include="resources\5. Taste\3. Are there some things you really like to eat_\desktop.ini" />
@@ -343,9 +344,12 @@
     <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.6BathroomAppliances.wav" />
     <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.7Sirens.wav" />
     <Content Include="resources\1. Hearing\1. Are there some sounds that you don%27t like_\1.1.8SuddenLoudNoises.wav" />
+    <Content Include="resources\1. Hearing\2. Are there times when it is hard to listen_\1 If I am concentrating on something, I don%27t notice people talking to me.png" />
     <Content Include="resources\1. Hearing\2. Are there times when it is hard to listen_\1.2.1Concentrating.wav" />
     <Content Include="resources\1. Hearing\2. Are there times when it is hard to listen_\1.2.2NoisyClassroom.wav" />
     <Content Include="resources\1. Hearing\2. Are there times when it is hard to listen_\1.2.3ListenToSomone.wav" />
+    <Content Include="resources\1. Hearing\2. Are there times when it is hard to listen_\2 I find it hard to listen in noisy classrooms %28self-report version%29.jpg" />
+    <Content Include="resources\1. Hearing\2. Are there times when it is hard to listen_\3 I find it hard to listen to someone talking to me when I%27m in a group.jpg" />
     <Content Include="resources\1. Hearing\3. Are there some sounds that make it hard for you to concentrate_\1.3.1Radio.wav" />
     <Content Include="resources\1. Hearing\3. Are there some sounds that make it hard for you to concentrate_\1.3.2ClockTicking.wav" />
     <Content Include="resources\1. Hearing\3. Are there some sounds that make it hard for you to concentrate_\1.3.3PeopleTalking.wav" />
